force-app/main/default/objects/FCH__c/FCH__c.object-meta.xml
<CustomObject>
    <label>FCH</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCH Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>