force-app/main/default/objects/FCH__c/fields/APP_Record__c.field-meta.xml
<CustomField>
    <fullName>APP_Record__c</fullName>
    <label>APP Record</label>
    <length>50</length>
    <type>Text</type>
</CustomField>