force-app/main/default/objects/FCH__c/fields/NFHV_Address1__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Address1__c</fullName>
    <label>NFHV_Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>