force-app/main/default/objects/FCH__c/fields/NFHV_Address2__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Address2__c</fullName>
    <label>NFHV_Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>