force-app/main/default/objects/FCH__c/fields/NFHV_BabyTransfered__c.field-meta.xml
<CustomField>
    <fullName>NFHV_BabyTransfered__c</fullName>
    <label>NFHV_BabyTransfered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>