force-app/main/default/objects/FCH__c/fields/NFHV_CallerAssignedName__c.field-meta.xml
<CustomField>
    <fullName>NFHV_CallerAssignedName__c</fullName>
    <label>NFHV_CallerAssignedName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>