force-app/main/default/objects/FCH__c/fields/NFHV_Child6MthsTo48Mths__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Child6MthsTo48Mths__c</fullName>
    <label>NFHV_Child6MthsTo48Mths</label>
    <length>255</length>
    <type>Text</type>
</CustomField>