force-app/main/default/objects/FCH__c/fields/NFHV_ChildHasHealthInsurance__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ChildHasHealthInsurance__c</fullName>
    <label>NFHV_ChildHasHealthInsurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>