force-app/main/default/objects/FCH__c/fields/NFHV_City__c.field-meta.xml
<CustomField>
    <fullName>NFHV_City__c</fullName>
    <label>NFHV_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>