force-app/main/default/objects/FCH__c/fields/NFHV_ConcernsAboutChildDeveloping__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ConcernsAboutChildDeveloping__c</fullName>
    <label>NFHV_ConcernsAboutChildDeveloping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>