force-app/main/default/objects/FCH__c/fields/NFHV_CurrentlyPregnant__c.field-meta.xml
<CustomField>
    <fullName>NFHV_CurrentlyPregnant__c</fullName>
    <label>NFHV_CurrentlyPregnant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>