force-app/main/default/objects/FCH__c/fields/NFHV_CurrentlyReceivingServices__c.field-meta.xml
<CustomField>
    <fullName>NFHV_CurrentlyReceivingServices__c</fullName>
    <label>NFHV_CurrentlyReceivingServices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>