force-app/main/default/objects/FCH__c/fields/NFHV_CurrentReviewerId__c.field-meta.xml
<CustomField>
    <fullName>NFHV_CurrentReviewerId__c</fullName>
    <label>NFHV_CurrentReviewerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>