force-app/main/default/objects/FCH__c/fields/NFHV_DateTransfered__c.field-meta.xml
<CustomField>
    <fullName>NFHV_DateTransfered__c</fullName>
    <label>NFHV_DateTransfered</label>
    <type>DateTime</type>
</CustomField>