force-app/main/default/objects/FCH__c/fields/NFHV_DOB__c.field-meta.xml
<CustomField>
    <fullName>NFHV_DOB__c</fullName>
    <label>NFHV_DOB</label>
    <type>DateTime</type>
</CustomField>