force-app/main/default/objects/FCH__c/fields/NFHV_DOBChild__c.field-meta.xml
<CustomField>
    <fullName>NFHV_DOBChild__c</fullName>
    <label>NFHV_DOBChild</label>
    <type>DateTime</type>
</CustomField>