force-app/main/default/objects/FCH__c/fields/NFHV_Email2__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Email2__c</fullName>
    <label>NFHV_Email2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>