force-app/main/default/objects/FCH__c/fields/NFHV_Email__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Email__c</fullName>
    <label>NFHV_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>