force-app/main/default/objects/FCH__c/fields/NFHV_EmployeeKnowledgeable__c.field-meta.xml
<CustomField>
    <fullName>NFHV_EmployeeKnowledgeable__c</fullName>
    <label>NFHV_EmployeeKnowledgeable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>