force-app/main/default/objects/FCH__c/fields/NFHV_ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ExpectedDeliveryDate__c</fullName>
    <label>NFHV_ExpectedDeliveryDate</label>
    <type>DateTime</type>
</CustomField>