force-app/main/default/objects/FCH__c/fields/NFHV_ExpectingFirstChild__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ExpectingFirstChild__c</fullName>
    <label>NFHV_ExpectingFirstChild</label>
    <length>255</length>
    <type>Text</type>
</CustomField>