force-app/main/default/objects/FCH__c/fields/NFHV_FirstName__c.field-meta.xml
<CustomField>
    <fullName>NFHV_FirstName__c</fullName>
    <label>NFHV_FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>