force-app/main/default/objects/FCH__c/fields/NFHV_FirstVisitWeeks__c.field-meta.xml
<CustomField>
    <fullName>NFHV_FirstVisitWeeks__c</fullName>
    <label>NFHV_FirstVisitWeeks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>