force-app/main/default/objects/FCH__c/fields/NFHV_FoodConcernsLast30Days__c.field-meta.xml
<CustomField>
    <fullName>NFHV_FoodConcernsLast30Days__c</fullName>
    <label>NFHV_FoodConcernsLast30Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>