force-app/main/default/objects/FCH__c/fields/NFHV_HasACS_Case__c.field-meta.xml
<CustomField>
    <fullName>NFHV_HasACS_Case__c</fullName>
    <label>NFHV_HasACS_Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>