force-app/main/default/objects/FCH__c/fields/NFHV_HasHealthInsurance__c.field-meta.xml
<CustomField>
    <fullName>NFHV_HasHealthInsurance__c</fullName>
    <label>NFHV_HasHealthInsurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>