force-app/main/default/objects/FCH__c/fields/NFHV_HealthBeforePregnancy__c.field-meta.xml
<CustomField>
    <fullName>NFHV_HealthBeforePregnancy__c</fullName>
    <label>NFHV_HealthBeforePregnancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>