force-app/main/default/objects/FCH__c/fields/NFHV_HowSatisfied__c.field-meta.xml
<CustomField>
    <fullName>NFHV_HowSatisfied__c</fullName>
    <label>NFHV_HowSatisfied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>