force-app/main/default/objects/FCH__c/fields/NFHV_IncomeEnrolledInProgram__c.field-meta.xml
<CustomField>
    <fullName>NFHV_IncomeEnrolledInProgram__c</fullName>
    <label>NFHV_IncomeEnrolledInProgram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>