force-app/main/default/objects/FCH__c/fields/NFHV_IncomeHRACashAssist__c.field-meta.xml
<CustomField>
    <fullName>NFHV_IncomeHRACashAssist__c</fullName>
    <label>NFHV_IncomeHRACashAssist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>