force-app/main/default/objects/FCH__c/fields/NFHV_IncomeSSI__c.field-meta.xml
<CustomField>
    <fullName>NFHV_IncomeSSI__c</fullName>
    <label>NFHV_IncomeSSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>