force-app/main/default/objects/FCH__c/fields/NFHV_IncomeTANF__c.field-meta.xml
<CustomField>
    <fullName>NFHV_IncomeTANF__c</fullName>
    <label>NFHV_IncomeTANF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>