force-app/main/default/objects/FCH__c/fields/NFHV_IncomeWIC__c.field-meta.xml
<CustomField>
    <fullName>NFHV_IncomeWIC__c</fullName>
    <label>NFHV_IncomeWIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>