force-app/main/default/objects/FCH__c/fields/NFHV_InterestedInParticipating__c.field-meta.xml
<CustomField>
    <fullName>NFHV_InterestedInParticipating__c</fullName>
    <label>NFHV_InterestedInParticipating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>