force-app/main/default/objects/FCH__c/fields/NFHV_LastName__c.field-meta.xml
<CustomField>
    <fullName>NFHV_LastName__c</fullName>
    <label>NFHV_LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>