force-app/main/default/objects/FCH__c/fields/NFHV_MartialStatus__c.field-meta.xml
<CustomField>
    <fullName>NFHV_MartialStatus__c</fullName>
    <label>NFHV_MartialStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>