force-app/main/default/objects/FCH__c/fields/NFHV_MobilePhoneNumber3__c.field-meta.xml
<CustomField>
    <fullName>NFHV_MobilePhoneNumber3__c</fullName>
    <label>NFHV_MobilePhoneNumber3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>