force-app/main/default/objects/FCH__c/fields/NFHV_MobilePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>NFHV_MobilePhoneNumber__c</fullName>
    <label>NFHV_MobilePhoneNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>