force-app/main/default/objects/FCH__c/fields/NFHV_MomTransfered__c.field-meta.xml
<CustomField>
    <fullName>NFHV_MomTransfered__c</fullName>
    <label>NFHV_MomTransfered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>