force-app/main/default/objects/FCH__c/fields/NFHV_NeedItemsForInfant__c.field-meta.xml
<CustomField>
    <fullName>NFHV_NeedItemsForInfant__c</fullName>
    <label>NFHV_NeedItemsForInfant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>