force-app/main/default/objects/FCH__c/fields/NFHV_NeedItemsForInfantSpecify__c.field-meta.xml
<CustomField>
    <fullName>NFHV_NeedItemsForInfantSpecify__c</fullName>
    <label>NFHV_NeedItemsForInfantSpecify</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>