force-app/main/default/objects/FCH__c/fields/NFHV_NewParent__c.field-meta.xml
<CustomField>
    <fullName>NFHV_NewParent__c</fullName>
    <label>NFHV_NewParent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>