force-app/main/default/objects/FCH__c/fields/NFHV_NFHV_tblReviewerId_Current__c.field-meta.xml
<CustomField>
    <fullName>NFHV_NFHV_tblReviewerId_Current__c</fullName>
    <label>NFHV_NFHV_tblReviewerId_Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>