force-app/main/default/objects/FCH__c/fields/NFHV_OVSReferralsConsentCallerUserName__c.field-meta.xml
<CustomField>
    <fullName>NFHV_OVSReferralsConsentCallerUserName__c</fullName>
    <label>NFHV_OVSReferralsConsentCallerUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>