force-app/main/default/objects/FCH__c/fields/NFHV_OVSReferralsConsentDatetime__c.field-meta.xml
<CustomField>
    <fullName>NFHV_OVSReferralsConsentDatetime__c</fullName>
    <label>NFHV_OVSReferralsConsentDatetime</label>
    <type>DateTime</type>
</CustomField>