force-app/main/default/objects/FCH__c/fields/NFHV_Participating__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Participating__c</fullName>
    <label>NFHV_Participating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>