force-app/main/default/objects/FCH__c/fields/NFHV_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>NFHV_PostalCode__c</fullName>
    <label>NFHV_PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>