force-app/main/default/objects/FCH__c/fields/NFHV_PreferredContact__c.field-meta.xml
<CustomField>
    <fullName>NFHV_PreferredContact__c</fullName>
    <label>NFHV_PreferredContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>