force-app/main/default/objects/FCH__c/fields/NFHV_PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>NFHV_PreferredLanguage__c</fullName>
    <label>NFHV_PreferredLanguage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>