force-app/main/default/objects/FCH__c/fields/NFHV_PregnancyHighRisk__c.field-meta.xml
<CustomField>
    <fullName>NFHV_PregnancyHighRisk__c</fullName>
    <label>NFHV_PregnancyHighRisk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>