force-app/main/default/objects/FCH__c/fields/NFHV_Program__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Program__c</fullName>
    <label>NFHV_Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>