force-app/main/default/objects/FCH__c/fields/NFHV_QualifiedReferrals__c.field-meta.xml
<CustomField>
    <fullName>NFHV_QualifiedReferrals__c</fullName>
    <label>NFHV_QualifiedReferrals</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>