force-app/main/default/objects/FCH__c/fields/NFHV_RecommendService__c.field-meta.xml
<CustomField>
    <fullName>NFHV_RecommendService__c</fullName>
    <label>NFHV_RecommendService</label>
    <length>255</length>
    <type>Text</type>
</CustomField>