force-app/main/default/objects/FCH__c/fields/NFHV_ReferredText__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ReferredText__c</fullName>
    <label>NFHV_ReferredText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>