force-app/main/default/objects/FCH__c/fields/NFHV_ReferredTextCommunityServices__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ReferredTextCommunityServices__c</fullName>
    <label>NFHV_ReferredTextCommunityServices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>