force-app/main/default/objects/FCH__c/fields/NFHV_ReferredValue__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ReferredValue__c</fullName>
    <label>NFHV_ReferredValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>