force-app/main/default/objects/FCH__c/fields/NFHV_ReferredValueCommunityServices__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ReferredValueCommunityServices__c</fullName>
    <label>NFHV_ReferredValueCommunityServices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>