force-app/main/default/objects/FCH__c/fields/NFHV_ResideInNYCHAorPublicHousing__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ResideInNYCHAorPublicHousing__c</fullName>
    <label>NFHV_ResideInNYCHAorPublicHousing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>