force-app/main/default/objects/FCH__c/fields/NFHV_ResideInNYCHAorPublicHousingStreetA__c.field-meta.xml
<CustomField>
    <fullName>NFHV_ResideInNYCHAorPublicHousingStreetA__c</fullName>
    <label>NFHV_ResideInNYCHAorPublicHousingStreetA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>