force-app/main/default/objects/FCH__c/fields/NFHV_SafeHousing__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SafeHousing__c</fullName>
    <label>NFHV_SafeHousing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>