force-app/main/default/objects/FCH__c/fields/NFHV_SceeningType__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SceeningType__c</fullName>
    <label>NFHV_SceeningType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>