force-app/main/default/objects/FCH__c/fields/NFHV_SomeoneHurtYouLastYear__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SomeoneHurtYouLastYear__c</fullName>
    <label>NFHV_SomeoneHurtYouLastYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>