force-app/main/default/objects/FCH__c/fields/NFHV_Source__c.field-meta.xml
<CustomField>
    <fullName>NFHV_Source__c</fullName>
    <label>NFHV_Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>