force-app/main/default/objects/FCH__c/fields/NFHV_SpeaksEnglish__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SpeaksEnglish__c</fullName>
    <label>NFHV_SpeaksEnglish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>