force-app/main/default/objects/FCH__c/fields/NFHV_SpecialNeeds__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SpecialNeeds__c</fullName>
    <label>NFHV_SpecialNeeds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>