force-app/main/default/objects/FCH__c/fields/NFHV_SupportDuringChildbirth__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SupportDuringChildbirth__c</fullName>
    <label>NFHV_SupportDuringChildbirth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>