force-app/main/default/objects/FCH__c/fields/NFHV_SurveyGivenOn__c.field-meta.xml
<CustomField>
    <fullName>NFHV_SurveyGivenOn__c</fullName>
    <label>NFHV_SurveyGivenOn</label>
    <type>DateTime</type>
</CustomField>