force-app/main/default/objects/FCH__c/fields/NFHV_YoungestChild__c.field-meta.xml
<CustomField>
    <fullName>NFHV_YoungestChild__c</fullName>
    <label>NFHV_YoungestChild</label>
    <length>255</length>
    <type>Text</type>
</CustomField>