force-app/main/default/objects/FCH__c/fields/Reference_Number_Delete__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Delete__c</fullName>
    <formula>APP_Record__c &amp; &quot;-&quot; &amp; TEXT(YEAR(TODAY())) &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(TODAY())),2) &amp; RIGHT(&quot;0&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(DAY(TODAY())),2),2) &amp; RIGHT(&quot;0&quot; &amp; TEXT(HOUR(TIMENOW())),2) &amp; RIGHT(&quot;0&quot; &amp; TEXT(MINUTE(TIMENOW())),2) &amp; RIGHT(&quot;0&quot; &amp; TEXT(SECOND(TIMENOW())),2) &amp; IF(CONTAINS($User.Email, &quot;@&quot;) ,&quot;-&quot; &amp; UPPER(MID($User.Email, 0, FIND(&quot;@&quot;, $User.Email) - 1)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number Delete</label>
    <type>Text</type>
</CustomField>