force-app/main/default/objects/FCH__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NFHV_FirstName__c</columns>
    <columns>NFHV_LastName__c</columns>
    <columns>NFHV_DOB__c</columns>
    <columns>NFHV_MobilePhoneNumber__c</columns>
    <columns>NFHV_Email__c</columns>
    <columns>NFHV_Address1__c</columns>
    <columns>NFHV_Address2__c</columns>
    <columns>NFHV_City__c</columns>
    <columns>NFHV_PostalCode__c</columns>
    <columns>NFHV_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>